--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,13 @@
 name = "bevy_tetris"
 version = "0.1.0"
 authors = ["makibishi <makibishi0212@gmail.com>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.4"
+bevy = "0.6"
 rand = "0.7.3"
+
+[profile.dev]
+opt-level = 1
